linking to my github

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Omar Adel</a>.
+      >. Coded by <a href="https://github.com/OmarAdelAttia">Omar Adel</a>.
     </div>
   </body>
 </html>
