--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Omar Adel | QR code component | Frontend Mentor</title>
   </head>
   <body>
-    <div class="qr-code-card">
+    <main class="qr-code-card">
       <div class="qr-code">
         <img src="./assets/image-qr-code.png" alt="QR Code" />
       </div>
@@ -28,13 +28,13 @@
           to the next level
         </p>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/OmarAdelAttia">Omar Adel</a>.
-    </div>
+    </footer>
   </body>
 </html>
