improving the code from others comments

--- a/index.html
+++ b/index.html
@@ -17,24 +17,29 @@
     <title>Omar Adel | QR code component | Frontend Mentor</title>
   </head>
   <body>
-    <main class="qr-code-card">
-      <div class="qr-code">
-        <img src="./assets/image-qr-code.png" alt="QR Code" />
-      </div>
-      <div class="qr-desription">
-        <h2 class="qr-title">Improve your front-end skills by building projects</h2>
-        <p class="qr-paragraph">
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
-    </main>
+    <!-- the solution div is to just centerilze both the main & footer -->
+    <div class="solution">
+      <main class="qr-code-card">
+        <div class="qr-code">
+          <img src="./assets/image-qr-code.png" alt="QR Code" />
+        </div>
+        <div class="qr-desription">
+          <h1 class="qr-title">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="qr-paragraph">
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </main>
 
-    <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/OmarAdelAttia">Omar Adel</a>.
-    </footer>
+      <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/OmarAdelAttia">Omar Adel</a>.
+      </footer>
+    </div>
   </body>
 </html>
